--- a/dailygeeks/index.html
+++ b/dailygeeks/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Geeks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="navbar"></div>
@@ -331,7 +332,7 @@
                     <div class="d-flex">
                         <div class="col-md-2 p-2 text-white font-weight-bold d-flex justify-content-center align-items-center" style="width: 40px; height: 40px; background-color: #FA824F; font-weight: 700; font-size: 18px;">1</div>
                         <div class="col-md-10">
-                            <div class="font-weight-bold" style="font-weight: 500; padding-left: 10px;">Telecharger les Sims 4 en Torrent reserve une drol...</div>
+                            <div class="font-weight-bold" style="font-weight: 500; padding-left: 10px;"><a href="article.html">Telecharger les Sims 4 en Torrent reserve une drol...</a></div>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center gap-2">
