tweak: makeup web - changed image assets

--- a/makeupreviewshall/article.html
+++ b/makeupreviewshall/article.html
@@ -140,13 +140,13 @@
                     <h2 style="font-size: 24px; font-weight: 700;"><u>Best Body Wash For Body Acne & Pimples</u></h2>
                     <p>I normally suffer from <b>BACK ACNE</b> on and off because of my OILY ACNE PRONE SKIN and thats why this TEA TREE OIL BODY WASH caught my attention. The moment I saw this Love Beauty And Planet Tea Tree & Vetiver Body Wash I could not resist myself from buying it because of few reasons, one it had tea tree oil, which is amazing for acne prone skin and secondly because it was all natural, organic free from all kinds of chemicals like parabens, sulphate etc. </p>
                     
-                    <div class="col-md-12 img-cover text-center"><img src="https://placehold.co/500x900" alt="share" width="500" height="900"/></div>
+                    <div class="col-md-12 img-cover text-center"><img src="https://web.archive.org/web/20210512040438im_/https://1.bp.blogspot.com/-lpgsKS576f8/XUmAPwWMYcI/AAAAAAAAFDQ/EkLFPqFGrjYc4UFEo-v8T08-x_JNkG5QgCLcBGAs/s1600/Love-_Beauty-%2526-Planet-Tea-Tree-%2526-Vetiver-Body-Wash-Review.jpg" alt="share" width="500" height="900"/></div>
 
                     <p>This is one body wash which is 100 % Organic and free from all types of chemicals be it sulpahte, paraben, or dye thats why its not only a good body cleanser for oily acne prone skin but for sensitive skin beauties also. Before I start with its review, lets check its details first.</p>
 
                     <a><u><h4>Love Beauty And Planet Tea Tree & Vetiver Daily Detox Body Wash Details</h4></u></a>
 
-                    <div class="col-md-12 img-cover text-center"><img src="https://placehold.co/500x900" alt="share" width="500" height="900"/></div>
+                    <div class="col-md-12 img-cover text-center"><img src="https://web.archive.org/web/20210512040438im_/https://1.bp.blogspot.com/-sKkHlPv6Trk/XQYkPtp-vaI/AAAAAAAAFCU/EPkXZaIBMCsDjYob-ijur9IFvd-nvNEAwCLcBGAs/s1600/Dabur-Mahabhringraj-Hair-Oil-Review-For-Long-Shiny-Hair%2B%25281%2529.jpg" alt="share" width="500" height="900"/></div>
 
                     <p><b><i>Tea Tree Oil Body Wash For Back Acne</i></b> comes in a beautiful round light green bottle with a flip cap which is neither too tight nor too loose. The body wash looks like a transparent gel and is of medium consistency. It didn’t lather much when I applied directly on my back but on using with loofah, it lathered amazingly. This body cleanser comes with a gentle fragrance of tea tree oil with a cooling touch. I believe its the combination of Tea & Vetiver which makes it like this.</p>
 
