--- a/makeupreviewshall/navbar.html
+++ b/makeupreviewshall/navbar.html
@@ -9,9 +9,9 @@
         </div>
     </div>
     
-    <div id="ads-section container">
-        <h1>Makeup Reviews Hall - Best Makeup & Beauty Blog in India</h1>
-        <p>Started in 2012, One of The Most Trusted, Genuine Indian Makeup and Beauty Blog with Best Product Reviews, Makeup Beauty Tips, Weight Loss, Skin Care & More ...</p>
+    <div id="ads-section container" style="font-family: 'Poppins', sans-serif;">
+        <h1 style="font-family: 'Poppins', sans-serif;">Makeup Reviews Hall - Best Makeup & Beauty Blog in India</h1>
+        <p style="font-family: 'Poppins', sans-serif;">Started in 2012, One of The Most Trusted, Genuine Indian Makeup and Beauty Blog with Best Product Reviews, Makeup Beauty Tips, Weight Loss, Skin Care & More ...</p>
     </div>
 
     <div class="row pt-2 pb-2" style="width: 100%; background-color: #45818e;">
