--- a/dailygeeks/navbar.html
+++ b/dailygeeks/navbar.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light container d-flex flex-column gap-5">
+<nav class="navbar navbar-expand-lg navbar-light container d-flex flex-column gap-5">
     <div class="row w-100 d-flex justify-content-between">
         <a class="navbar-brand col-3" href="/">
-            <img src="/assets/img/site-logo.jpg" alt="" height="54" class="d-inline-block align-text-top" />
+            <img src="./assets/img/site-logo.jpg" alt="" height="54" class="d-inline-block align-text-top" />
         </a>
         <div id="search-bar" class="col-4 d-flex gap-2 align-items-center">
             <input type="text" placeholder="Recherche personnalisée" class="form-control" style="height: 20px;" />
             <button class="btn btn-dark">Rechercher</button>
         </div>
         <div id="social-media" class="d-flex gap-2 justify-content-end col-4">
-            <img src="/assets/img/twitter.png" alt="twitter" width="50" height="50" />
-            <img src="/assets/img/facebook.png" alt="facebook" width="50" height="50" />
-            <img src="/assets/img/rss.png" alt="share" width="50" height="50" />
+            <img src="./assets/img/twitter.png" alt="twitter" width="50" height="50" />
+            <img src="./assets/img/facebook.png" alt="facebook" width="50" height="50" />
+            <img src="./assets/img/rss.png" alt="share" width="50" height="50" />
         </div>
     </div>
     
@@ -27,7 +27,7 @@
                     <a class="nav-link text-white" href="/categories/jeux-video.html">Jeux-Video</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/categories/mobile">Mobile</a>
+                    <a class="nav-link text-white" href="/categories/mobile.html">Mobile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/categories/high-tech.html">High-Tech</a>
